--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
 <style>
 h1{
 background:url(https://dss2.bdstatic.com/70cFvnSh_Q1YnxGkpoWK1HF6hhy/it/u=2162204979,1827870437&fm=26&gp=0.jpg);
+  color:white;
 }
+  span{
+    background:rgba(27,31,35,.05);
+  }
 </style>
 </head>
 <body>
@@ -14,7 +18,7 @@ background:url(https://dss2.bdstatic.com/70cFvnSh_Q1YnxGkpoWK1HF6hhy/it/u=216220
 Mod.js是全世界较为先进的<span>Minecraft Bedrock Edition</span>的<span>/connect</span>免费<span>mod</span>开发和安装器!<br />
 它十分先进！<br />
 欢迎安装！<br />
-链接:<a href="https://github.com/liumingedwin/Minecraft-Mod-Configer">这里</a>
+链接:<a href="https://github.com/liumingedwin/Minecraft-Mod-Configer">点击这里</a>
 </p>
 </body>
 </html>
