--- a/index.html
+++ b/index.html
@@ -4,16 +4,22 @@
 <title>Mod.js</title>
 <style>
 h1{
-background:url(https://dss2.bdstatic.com/70cFvnSh_Q1YnxGkpoWK1HF6hhy/it/u=2162204979,1827870437&fm=26&gp=0.jpg);
   color:white;
 }
   span{
     background:rgba(27,31,35,.05);
   }
+#title{
+  background:url(https://dss2.bdstatic.com/70cFvnSh_Q1YnxGkpoWK1HF6hhy/it/u=2162204979,1827870437&fm=26&gp=0.jpg);
+  width:100%;
+  height:70vh;
+ }
 </style>
 </head>
 <body>
+  <div id="title">
 <h1>欢迎使用Mod.js</h1>
+    </div>
 <p>
 Mod.js是全世界较为先进的<span>Minecraft Bedrock Edition</span>的<span>/connect</span>免费<span>mod</span>开发和安装器!<br />
 它十分先进！<br />
