--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ h1{
     background:rgba(27,31,35,.05);
   }
 #title{
-  background:url(https://dss2.bdstatic.com/70cFvnSh_Q1YnxGkpoWK1HF6hhy/it/u=2162204979,1827870437&fm=26&gp=0.jpg);
+  background:url(http://pics.sc.chinaz.com/files/pic/pic9/202004/zzpic24207.jpg);
   width:100%;
   height:70vh;
  }
