--- a/index.html
+++ b/index.html
@@ -18,17 +18,44 @@ h1{
   a{
     text-decoration:none;
   }
+.child1{
+float:left;
+width:33%;
+height:100%;
+}
+#lists{
+text-align:center;
+width:100%;
+height:30%;
+}
+html{
+padding:0;
+margin:0;
+}
+#titlek{
+text-align:center;
+}
 </style>
 </head>
 <body>
   <div id="title">
 <h1>欢迎使用Mod.js</h1>
-    </div>
-<p>
-Mod.js是全世界较为先进的<span>Minecraft Bedrock Edition</span>的<span>/connect</span>免费<span>mod</span>开发和安装器!<br />
-它十分先进！<br />
-欢迎安装！<br />
-链接:<a href="https://github.com/liumingedwin/Minecraft-Mod-Configer">点击这里</a>
+<h2 id="titlek">Mod.js是全中国甚至全世界第一批WebSocket精品</h2>
+<div id="lists">
+<div class="child1"><h2>易用</h2><p>我们拥有mod编辑器，方便编写！<br />
+只要你的指令及格，编写一个灵活的mod毫无问题<br />
+对Node.js开发者尤其友好<br />
+不像网易要收费，我们使用Mozilla开源协议<br />
 </p>
+</div>
+<div class="child1"><h2>灵活</h2><p>从Alpha 0.16便有了WebSocket，<br />使得几乎全部Minecraft基岩版都可运行</p></div>
+<div class="child1"><h2>高效</h2><p>Nodejs V8引擎使得类似这样的WebSocket脚本变得超快!<br />
+1kB min+gzip 运行大小<br />
+超快建造<br />
+以及最省心的优化！</p></div>
+</div>
+<h2><a href="/get-started">下载</a></h2>
+    </div>
+
 </body>
 </html>
