--- a/get-started/index.html
+++ b/get-started/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<title>Mod.js</title>
+<title>下载 —— Mod.js</title>
 <style>
 h1{
   color:white;
@@ -18,62 +18,36 @@ h1{
   a{
     text-decoration:none;
   }
-.child1{
-float:left;
-width:33%;
-height:100%;
-}
-#lists{
-text-align:center;
-width:100%;
-height:30%;
-}
-html{
-padding:0;
-margin:0;
-}
-#getstarted{
-color:blue;
-background:green;
-}
-#getstarted:before{
-color:transparent;
-content:"__________";
-}
-#getstarted:after{
-color:transparent;
-content:"__________";
-}
-.center{
-text-align:center;
-}
-.biggerlatter{
-font-size:2em;
-}
+
 </style>
 </head>
 <body>
   <div id="title">
 <h1>下载Mod.js</h1>
 <h2 class="center">点击下方链接下载Mod.js</h2>
-<div id="lists">
-<div class="child1">
-<h2>V1.0.3</h2>
-<p>加入conn.sendcommand()指令</p>
-</div>
-<div class="child1">
-<h2>V1.0.2</h2>
-<p>修改若干Bug</p>
-</div>
-<div class="child1">
-<h2>V1.0.1</h2>
-<p>修改若干Bug</p>
-</div>
-<div class="child1">
-<h2>V1.0.0</h2>
-<p>发布第一个版本</p>
-</div>
-</div>
+<ul>
+<li>V1.1.0<br />
+<ul>
+<li>更新指令conn.sendCommand</li>
+<li>调整conn.sendText功能</li>
+<li>修复Bug</li>
+<li>开始使用Mozilla协议</li>
+<li><a href="https://gitee.com/edwinlau/Minecraft-Mod-Configer/repository/archive/master.zip">下载链接A</a>(Gitee.com线路)</li>
+<li><a href="https://github.com/liumingedwin/Minecraft-Mod-Configer/archive/master.zip">下载链接B</a>(Github线路)</li>
+</li>
+<li>V1.0.1<br />
+<ul>
+<li>重写部分源代码从而优化性能</li>
+<li>修复若干Bug</li>
+</li>
+<li>V1.0.0<br />
+<ul>
+<li>发布本软件</li>
+<li>使用mit协议</li>
+</li>
+</ul>
+</li>
+</ul>
 
     </div>
 
