--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ font-size:2em;
 <body>
   <div id="title">
 <h1>欢迎使用Mod.js</h1>
-<h2 class="center">Mod.js是全中国甚至全世界第一批Minecraft Bedrock WebSocket精品</h2>
+<h2 class="center">Mod.js是全中国甚至全世界第一批Minecraft Bedrock Edition WebSocket精品</h2>
 <div id="lists">
 <div class="child1"><h2>易用</h2><p>我们拥有mod编辑器，方便编写！<br />
 只要你的指令及格，编写一个灵活的mod毫无问题<br />
@@ -72,7 +72,9 @@ font-size:2em;
 超快建造<br />
 以及最省心的优化！</p></div>
 </div>
-<h2 class="center biggerlatter"><a href="/get-started" id="getstarted">下载</a><br /><span style="font-size:0.5em;">(暂时只提供Windows版本)</span></h2>
+<h2 class="center biggerlatter"><a href="/get-started" id="getstarted">Nodejs版本下载</a></h2>
+<h2 class="center biggerlatter"><a href="/get-started-NW" id="getstarted">nwjs(GUI)下载</a>
+<br /><span style="font-size:0.5em;">(暂时只提供Windows版本)</span></h2>
     </div>
 
 </body>
