--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ html{
 padding:0;
 margin:0;
 }
-#getstarted{
+.getstart{
 color:blue;
 background:green;
 }
@@ -72,9 +72,8 @@ font-size:2em;
 超快建造<br />
 以及最省心的优化！</p></div>
 </div>
-<h2 class="center biggerlatter"><a href="/get-started" id="getstarted">Nodejs版本下载</a></h2>
-<h2 class="center biggerlatter"><a href="/get-started-NW" id="getstarted">nwjs(GUI)下载</a>
-<br /><span style="font-size:0.5em;">(暂时只提供Windows版本)</span></h2>
+<h2 class="center biggerlatter getstart"><a href="/get-started" id="getstarted">Nodejs版本下载</a></h2>
+<p class="center"><a href="get-started-nw">GUI版本下载(内测中)</a></p>
     </div>
 
 </body>
