--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ font-size:2em;
 以及最省心的优化！</p></div>
 </div>
 <h2 class="center biggerlatter getstart"><a href="/get-started" id="getstarted">Nodejs版本下载</a></h2>
-<p class="center"><a href="get-started-nw">GUI版本下载(内测中)</a></p>
+<p class="center"><a href="/get-started-nw">GUI版本下载(内测中)</a></p>
     </div>
 
 </body>
