--- a/blogs.in.docs/index.html
+++ b/blogs.in.docs/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Edwin Lau's Blogs. Displayed in & Powered By Docsify.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-  <link rel="stylesheet" href="//quantil.jsdelivr.net/npm/docsify@4/lib/themes/vue.css">
+  <link rel="stylesheet" href="https://unpkg.com/docsify@4/lib/themes/vue.css">
 </head>
 <body>
   <div id="app"></div>
@@ -17,6 +17,6 @@
     }
   </script>
   <!-- Docsify v4 -->
-  <script src="//quantil.jsdelivr.net/npm/docsify@4"></script>
+  <script src="https://unpkg.com/docsify@4/lib/docsify.min.js"></script>
 </body>
 </html>
