--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>
 		Edwin Lau 的个人站
 	</title>
+	<link rel="favicon" href="favicon.ico">
 	<link rel="stylesheet" href="./font-awesome-4.7.0/css/font-awesome.min.css">
 	<style>
 		* {
