--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		html {
 			background-size: cover;
 			background-repeat: no-repeat;
-			background-image: url(./OHR.SaintElias_ZH-CN2861097596-8k.jpg);
+			background-image: url(OHR.SaintElias_ZH-CN2861097596-8k.jpg);
 			width: 100%;
 			height: 100%;
 		}
