--- a/blogs.in.docs/index.html
+++ b/blogs.in.docs/index.html
@@ -13,7 +13,7 @@
   <script>
     window.$docsify = {
       name: '@liumingedwin',
-      repo: ''
+      repo: 'https://github.com/liumingedwin/liumingedwin.github.io/'
     }
   </script>
   <!-- Docsify v4 -->
