--- a/blogs.in.docs/index.html
+++ b/blogs.in.docs/index.html
@@ -13,7 +13,9 @@
   <script>
     window.$docsify = {
       name: '@liumingedwin',
-      repo: 'https://github.com/liumingedwin/liumingedwin.github.io/'
+      repo: 'https://github.com/liumingedwin/liumingedwin.github.io/',
+      auto2top: true,
+      logo: "/favicon.ico"
     }
   </script>
   <!-- Docsify v4 -->
