--- a/blogs.in.docs/index.html
+++ b/blogs.in.docs/index.html
@@ -15,6 +15,7 @@
       name: '@liumingedwin',
       repo: 'https://github.com/liumingedwin/liumingedwin.github.io/',
       auto2top: true,
+      coverpage: true,
       logo: "/favicon.ico"
     }
   </script>
