--- a/blogs.in.docs/index.html
+++ b/blogs.in.docs/index.html
@@ -16,7 +16,7 @@
       repo: 'https://github.com/liumingedwin/liumingedwin.github.io/',
       auto2top: true,
       coverpage: true,
-      logo: "/favicon.ico"
+      logo: "../favicon.ico"
     }
   </script>
   <!-- Docsify v4 -->
