--- a/blogs.in.docs/index.html
+++ b/blogs.in.docs/index.html
@@ -16,6 +16,7 @@
       repo: 'https://github.com/liumingedwin/liumingedwin.github.io/',
       auto2top: true,
       coverpage: true,
+      loadSidebar: true,
       logo: "../favicon.ico"
     }
   </script>
