--- a/blogs.in.docs/index.html
+++ b/blogs.in.docs/index.html
@@ -17,6 +17,7 @@
       auto2top: true,
       coverpage: true,
       loadSidebar: true,
+      basePath: '/blogs.in.docs/',
       logo: "../favicon.ico"
     }
   </script>
