--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			background-size: cover;
 			background-repeat: no-repeat;
 			/*background-image: url(/liumingedwin/liumingedwin.github.io/edit/main/OHR.SaintElias_ZH-CN2861097596-8k.jpg);*/
-			background-image: url(https://123.ly93.cc/211/1992612/OHR.SaintElias_ZH-CN2861097596-8k.jpg);
+			background-image: url(https://123.ly93.cc/211/1992612/OHR.SaintElias_ZH-CN2861097596-8k.jpg), url(OHR.SaintElias_ZH-CN2861097596-8k.jpg), url(https://jsd.onmicrosoft.cn/gh/liumingedwin/liumingedwin.github.io@main/OHR.SaintElias_ZH-CN2861097596-8k.jpg);
 			width: 100%;
 			height: 100%;
 		}
