--- a/blogs.in.docs/mirrors/index.html
+++ b/blogs.in.docs/mirrors/index.html
@@ -18,7 +18,7 @@
       coverpage: true,
       loadSidebar: true,
       basePath: 'https://jsd.onmicrosoft.cn/gh/liumingedwin/liumingedwin.github.io@main/blogs.in.docs/',
-      logo: "../favicon.ico"
+      logo: "../../favicon.ico"
     }
   </script>
   <!-- Docsify v4 -->
