--- a/blogs.in.docs/index.html
+++ b/blogs.in.docs/index.html
@@ -22,6 +22,7 @@
     }
   </script>
   <!-- Docsify v4 -->
-  <script src="https://unpkg.com/docsify@4/lib/docsify.min.js"></script>
+  <script src="//unpkg.com/docsify@4/lib/docsify.min.js"></script>
+  <script src="//unpkg.com/docsify/lib/plugins/external-script.min.js"></script>
 </body>
 </html>
