--- a/blogs.in.docs/index.html
+++ b/blogs.in.docs/index.html
@@ -24,5 +24,6 @@
   <!-- Docsify v4 -->
   <script src="//unpkg.com/docsify@4/lib/docsify.min.js"></script>
   <script src="//unpkg.com/docsify/lib/plugins/external-script.min.js"></script>
+  <script src="//unpkg.com/docsify/lib/plugins/search.min.js"></script>
 </body>
 </html>
