--- a/blogs.in.docs/index.html
+++ b/blogs.in.docs/index.html
@@ -49,6 +49,12 @@
           // 您可以提供一个正则表达式来匹配前缀。在这种情况下，
           // 匹配到的字符串将被用来识别索引
       },
+	  count:{
+	    countable:true,
+	    fontsize:'0.9em',
+	    color:'rgb(90,90,90)',
+	    language:'chinese'
+	  },
       logo: "../favicon.ico"
     }
   </script>
@@ -56,5 +62,6 @@
   <script src="//unpkg.com/docsify@4/lib/docsify.min.js"></script>
   <script src="//unpkg.com/docsify/lib/plugins/external-script.min.js"></script>
   <script src="//unpkg.com/docsify/lib/plugins/search.min.js"></script>
+  <script src="//unpkg.com/docsify-count/dist/countable.js"></script>
 </body>
 </html>
