--- a/blogs.in.docs/index.html
+++ b/blogs.in.docs/index.html
@@ -63,5 +63,12 @@
   <script src="//unpkg.com/docsify/lib/plugins/external-script.min.js"></script>
   <script src="//unpkg.com/docsify/lib/plugins/search.min.js"></script>
   <script src="//unpkg.com/docsify-count/dist/countable.js"></script>
+  <script src="///unpkg.com//katex@latest/dist/katex.min.js"></script>
+<link rel="stylesheet" href="//unpkg.com/katex@latest/dist/katex.min.css" />
+<script src="//unpkg.com//marked@4"></script>
+
+<!-- CDN files for docsify-katex -->
+<script src="//unpkg.com/docsify-katex@latest/dist/docsify-katex.js"></script>
+<!-- or <script src="//cdn.jsdelivr.net/gh/upupming/docsify-katex@latest/dist/docsify-katex.js"></script> -->
 </body>
 </html>
