--- a/blogs.in.docs/index.html
+++ b/blogs.in.docs/index.html
@@ -69,6 +69,8 @@
 
 <!-- CDN files for docsify-katex -->
 <script src="//unpkg.com/docsify-katex@latest/dist/docsify-katex.js"></script>
+	<!-- Latest v2.x.x -->
+<script src="https://unpkg.com/docsify-copy-code@2"></script>
 <!-- or <script src="//cdn.jsdelivr.net/gh/upupming/docsify-katex@latest/dist/docsify-katex.js"></script> -->
 </body>
 </html>
