--- a/blogs.in.docs/mirrors/index.html
+++ b/blogs.in.docs/mirrors/index.html
@@ -57,7 +57,7 @@
 				color: 'rgb(90,90,90)',
 				language: 'chinese'
 			},
-			logo: "/favicon.ico"
+			logo: "../../favicon.ico"
 		}
 	</script>
 	<!-- Docsify v4 -->
