--- a/blogs.in.docs/index.html
+++ b/blogs.in.docs/index.html
@@ -73,6 +73,8 @@
 	<script src="//unpkg.com/docsify-katex@latest/dist/docsify-katex.js"></script>
 	<!-- Latest v2.x.x -->
 	<script src="https://unpkg.com/docsify-copy-code@2"></script>
+	<script src="//unpkg.com/prismjs@1/components/prism-bash.min.js"></script>
+<script src="//unpkg.com/prismjs@1/components/prism-php.min.js"></script>
 	<!-- or <script src="//cdn.jsdelivr.net/gh/upupming/docsify-katex@latest/dist/docsify-katex.js"></script> -->
 </body>
 
