--- a/index.html
+++ b/index.html
@@ -90,6 +90,13 @@
 			text-align: center;
 			color: white;
 		}
+		#moemoemoemoemoe{
+			position: absolute;
+			bottom: 0;
+			width: 100%;
+			height: 10vh;
+			text-align: center;
+		}
 	</style>
 </head>
 
@@ -110,6 +117,8 @@
 			<div class="nav-el"><i class="fa fa-code"></i>&nbsp;Luogu</div>
 		</a>
 	</nav>
+	<div id="moemoemoemoemoe"><a href="https://icp.gov.moe/?keyword=20240534" target="_blank">萌ICP备20240534号</a> QwQ
+</div>
 </body>
 
 </html>
