--- a/index.html
+++ b/index.html
@@ -96,7 +96,9 @@
 			width: 100%;
 			height: 10vh;
 			text-align: center;
+			color: white;
 		}
+		#moemoemoemoemoe>a {color: pink;}
 	</style>
 </head>
 
@@ -117,7 +119,7 @@
 			<div class="nav-el"><i class="fa fa-code"></i>&nbsp;Luogu</div>
 		</a>
 	</nav>
-	<div id="moemoemoemoemoe"><a href="https://icp.gov.moe/?keyword=20240534" target="_blank">萌ICP备20240534号</a> QwQ
+	<div id="moemoemoemoemoe"><hr /><a href="https://icp.gov.moe/?keyword=20240534" target="_blank">萌ICP备20240534号</a><br /> Powered By GitHub. <br />Copyright: 2019 - 2024. All rights reserved.  
 </div>
 </body>
 
