--- a/blogs.in.docs/index.html
+++ b/blogs.in.docs/index.html
@@ -71,8 +71,40 @@
 
 	<!-- CDN files for docsify-katex -->
 	<script src="//unpkg.com/docsify-katex@latest/dist/docsify-katex.js"></script>
-	<!-- Latest v2.x.x -->
-	<script src="https://unpkg.com/docsify-copy-code@2"></script>
+<script src="//jsd.onmicrosoft.cn/npm/docsify-katex-ex"></script>
+<script src="//jsd.onmicrosoft.cn/npm/docsify-plugin-toc@1.3.1/dist/docsify-plugin-toc.min.js"></script>
+<script src="//jsd.onmicrosoft.cn/npm/prismjs@1/plugins/line-numbers/prism-line-numbers.min.js"></script>
+<!-- body -->
+<!--
+<script src="//jsd.onmicrosoft.cn/npm/prismjs@v1/components/prism-core.min.js"></script>
+<script>
+//Prism.plugins.autoloader = {}
+//Prism.plugins.autoloader.languages_path = '//jsd.onmicrosoft.cn/npm/prismjs@1/components/';
+//Prism.plugins.autoloader.use_minified = false;
+
+</script>
+<script src="//jsd.onmicrosoft.cn/npm/prismjs@v1/plugins/autoloader/prism-autoloader.min.js"></script>
+<script src="//jsd.onmicrosoft.cn/npm/prismjs@1/components.js"></script>
+-->
+<script src="//jsd.onmicrosoft.cn/npm/prismjs@1/components/prism-bash.min.js"></script>
+<script src="//jsd.onmicrosoft.cn/npm/prismjs@1/components/prism-c.min.js"></script>
+<script src="//jsd.onmicrosoft.cn/npm/prismjs@1/components/prism-cpp.min.js"></script>
+<script src="//jsd.onmicrosoft.cn/npm/prismjs@1/components/prism-docker.min.js"></script>
+<script src="//jsd.onmicrosoft.cn/npm/prismjs@1/components/prism-fortran.min.js"></script>
+<script src="//jsd.onmicrosoft.cn/npm/prismjs@1/components/prism-git.min.js"></script>
+<script src="//jsd.onmicrosoft.cn/npm/prismjs@1/components/prism-java.min.js"></script>
+<script src="//jsd.onmicrosoft.cn/npm/prismjs@1/components/prism-jsx.min.js"></script>
+<script src="//jsd.onmicrosoft.cn/npm/prismjs@1/components/prism-markdown.min.js"></script>
+<script src="//jsd.onmicrosoft.cn/npm/prismjs@1/components/prism-pascal.min.js"></script>
+<script src="//jsd.onmicrosoft.cn/npm/prismjs@1/components/prism-php.min.js"></script>
+<script src="//jsd.onmicrosoft.cn/npm/prismjs@1/components/prism-python.min.js"></script>
+<script src="//jsd.onmicrosoft.cn/npm/prismjs@1/components/prism-rust.min.js"></script>
+<script src="//jsd.onmicrosoft.cn/npm/prismjs@1/components/prism-sql.min.js"></script>
+<script src="//jsd.onmicrosoft.cn/npm/prismjs@1/components/prism-swift.min.js"></script>
+<script src="//jsd.onmicrosoft.cn/npm/prismjs@1/components/prism-typescript.min.js"></script>
+<script src="//jsd.onmicrosoft.cn/npm/prismjs@1/components/prism-yaml.min.js"></script>
+<script src="//jsd.onmicrosoft.cn/npm/katex@0.16.11/dist/contrib/copy-tex.min.js" integrity="sha384-HORx6nWi8j5/mYA+y57/9/CZc5z8HnEw4WUZWy5yOn9ToKBv1l58vJaufFAn9Zzi" crossorigin="anonymous"></script>
+
 	<!-- or <script src="//cdn.jsdelivr.net/gh/upupming/docsify-katex@latest/dist/docsify-katex.js"></script> -->
 </body>
 
