--- a/blogs.in.docs/index.html
+++ b/blogs.in.docs/index.html
@@ -8,7 +8,12 @@
 	<meta name="description" content="Edwin Lau's Blogs. Displayed in & Powered By Docsify.">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 	<!-- <link rel="stylesheet" href="https://unpkg.com/docsify@4/lib/themes/vue.css"> -->
-
+	<style>
+		.markdown-section pre:after {
+			left: 0!important;
+			text-align: left!important;
+		}
+	</style>
 	<script>
 		const tryImportStyleSheet = (stylesheet_url) => new Promise((resolve, reject) => {
 			// script_url = script_url.replaceAll(".min.css", ".css")
@@ -17,7 +22,7 @@
 			stylesheet_element.href = stylesheet_url;
 			stylesheet_element.onerror = reject;
 			stylesheet_element.onload = resolve;
-			document.head.appendChild(stylesheet_element)
+			document.head.appendChild(stylesheet_element);
 		});
 		const tryImportScript = (script_url) => new Promise((resolve, reject) => {
 			script_url = script_url.replaceAll(".min.js", ".js")
@@ -25,7 +30,7 @@
 			script_element.src = script_url;
 			script_element.onerror = reject;
 			script_element.onload = resolve;
-			document.head.appendChild(script_element)
+			document.head.appendChild(script_element);
 		});
 		const tryImportScriptFallback = async (scripts_url) => {
 			let ret = false;
@@ -34,8 +39,8 @@
 					await tryImportScript(u);
 					ret = true;
 				} catch (e) {
-					document.head.removeChild(e.target)
-					console.log(e)
+					document.head.removeChild(e.target);
+					console.log(e);
 				}
 				if (ret) return 0;
 			}
@@ -48,8 +53,8 @@
 					await tryImportStyleSheet(u);
 					ret = true;
 				} catch (e) {
-					document.head.removeChild(e.target)
-					console.log(e)
+					document.head.removeChild(e.target);
+					console.log(e);
 				}
 				if (ret) return 0;
 			}
@@ -67,8 +72,8 @@
 				`//quantil.jsdelivr.net/npm/${package_name}`,
 				`//originfastly.jsdelivr.net/npm/${package_name}`,
 			];
-			return tryImportScriptFallback(pattern)
-		}
+			return tryImportScriptFallback(pattern);
+		};
 		const importPackageCSS = async (package_name) => {
 			const pattern = [
 			`//testingcf.jsdelivr.net/npm/${package_name}`,
@@ -80,24 +85,28 @@
 				`//quantil.jsdelivr.net/npm/${package_name}`,
 				`//originfastly.jsdelivr.net/npm/${package_name}`,
 			];
-			return tryImportStyleSheetFallback(pattern)
-		}
-		importPackageCSS("docsify@4/lib/themes/vue.css")
-		importPackageCSS("prismjs@1/themes/prism.css")
-		importPackageCSS("docsify-plugin-toc@1.3.1/dist/light.css")
+			return tryImportStyleSheetFallback(pattern);
+		};
+		importPackageCSS("docsify@4/lib/themes/vue.css");
+		importPackageCSS("prismjs@1/themes/prism.css");
+		importPackageCSS("docsify-plugin-toc@1.3.1/dist/light.css");
+		importPackageCSS("prismjs@1/plugins/toolbar/prism-toolbar.min.css")
 	</script>
 </head>
 
 <body>
-	<div id="app"></div>
+	<div id="app" data-app></div>
 	<script>
-		window.$docsify = {
+		window.$docsify = window.$docsify || {};
+		Object.assign(window.$docsify, {
+			el: 'div#app',
 			name: '@liumingedwin',
 			repo: 'https://github.com/liumingedwin/liumingedwin.github.io/',
 			auto2top: true,
 			coverpage: true,
 			loadSidebar: true,
 			basePath: '/blogs.in.docs/',
+			catchPluginErrors: false, 
 			toc: {
 				tocMaxLevel: 5,
 				target: 'h2, h3, h4, h5, h6',
@@ -141,7 +150,7 @@
 				language: 'chinese'
 			},
 			logo: "../favicon.ico"
-		}
+		});	
 	</script>
 
 	<script>
@@ -162,6 +171,9 @@
 			return Promise.allSettled(
 				[
 					importPackage("prismjs@1/plugins/line-numbers/prism-line-numbers.min.js"),
+					importPackage("prismjs@1/plugins/toolbar/prism-toolbar.min.js"), 
+					importPackage("prismjs@1/plugins/copy-to-clipboard/prism-copy-to-clipboard.min.js"), 
+
 					...support_language.map(
 						v => importPackage(constructLocalUrl(v))
 					)
@@ -176,20 +188,21 @@
 					return importPackage("katex/dist/contrib/copy-tex.min.js");
 				})
 			};
-			await tryImportScript("./prismjs-workaround.js");
 			let pkgs_promise = [
 				importPackage("docsify@4/lib/plugins/external-script.min.js"),
 				importPackage("docsify@4/lib/plugins/search.min.js"),
 				importPackage("docsify-count/dist/countable.js"),
 				importPackage("docsify-plugin-toc@1.3.1/dist/docsify-plugin-toc.min.js"),
-				importPackage("marked@4"),
+				importPackage("marked@4/marked.min.js"),
 				importKaTeX()
 			];
 			let result = await Promise.allSettled(pkgs_promise);
 			console.log(result);
 			await tryImportScript("./crypto-polyfill.js").then(() => {
-				tryImportScript("./article-decryption.js")
-			})
+				return tryImportScript("./article-decryption.js")
+			});
+			
+			await tryImportScript("./prismjs-workaround.js");
 		})().then(() => {
 			return importPackage("docsify@4")
 		}).then(() => {
@@ -198,7 +211,6 @@
 	</script>
 	<link rel="stylesheet" href="//unpkg.com/katex@latest/dist/katex.min.css" />
 
-	<script src="./crypto-polyfill.js"></script>
 	<!-- Also insert you custom css -->
 	<!-- <script src="//jsd.onmicrosoft.cn/npm/katex@0.16.11/dist/contrib/copy-tex.min.js"
 		integrity="sha384-HORx6nWi8j5/mYA+y57/9/CZc5z8HnEw4WUZWy5yOn9ToKBv1l58vJaufFAn9Zzi"
