--- a/blogs.in.docs/index.html
+++ b/blogs.in.docs/index.html
@@ -171,8 +171,7 @@
 			return Promise.allSettled(
 				[
 					importPackage("prismjs@1/plugins/line-numbers/prism-line-numbers.min.js"),
-					importPackage("prismjs@1/plugins/toolbar/prism-toolbar.min.js"), 
-					importPackage("prismjs@1/plugins/copy-to-clipboard/prism-copy-to-clipboard.min.js"), 
+					importPackage("prismjs@1/plugins/toolbar/prism-toolbar.min.js").then(() => {return importPackage("prismjs@1/plugins/copy-to-clipboard/prism-copy-to-clipboard.min.js")}),  
 
 					...support_language.map(
 						v => importPackage(constructLocalUrl(v))
