--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!doctype html>
-<html>
+<html lang="en-US">
 
 <head>
 	<meta charset="utf-8">
 	<title>
 		Edwin Lau 的个人站
 	</title>
+	<meta name="description" content="Edwin Lau's own site. ">
 	<link rel="favicon" href="favicon.ico">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 	<link rel="stylesheet" href="./font-awesome-4.7.0/css/font-awesome.min.css">
 	<style>
 		* {
@@ -103,7 +105,7 @@
 </head>
 
 <body>
-	<img src="./avatar.jpg">
+	<img src="./avatar.jpg" alt="avatar-liumingedwin">
 	<h1>@liumingedwin</h1>
 	<nav>
 		<a href="./blogs.in.docs/">
