Upd: markdown code render optimization

--- a/blogs.in.docs/index.html
+++ b/blogs.in.docs/index.html
@@ -31,6 +31,9 @@
 			left: 0!important;
 			text-align: left!important;
 		}
+		.markdown-section pre > code {
+			padding: 0.2em 5px 0em 5px;
+		}
 	</style>
 </head>
 
