--- a/blogs.in.docs/index.html
+++ b/blogs.in.docs/index.html
@@ -32,7 +32,7 @@
 			text-align: left!important;
 		}
 		.markdown-section pre > code {
-			padding: 0.2em 5px 0em 5px;
+			padding: 0.2em 5px 0em 5px!important;
 		}
 	</style>
 </head>
