Upd: index.html link change

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			background-size: cover;
 			background-repeat: no-repeat;
 			/*background-image: url(/liumingedwin/liumingedwin.github.io/edit/main/OHR.SaintElias_ZH-CN2861097596-8k.jpg);*/
-			background-image: url(https://registry.npmmirror.com/liumingedwin-npm-img/1.2023.701/files/OHR.SaintElias_ZH-CN2861097596-8k.jpg), url(https://123.ly93.cc/211/1992612/OHR.SaintElias_ZH-CN2861097596-8k.jpg), url(OHR.SaintElias_ZH-CN2861097596-8k.jpg), url(https://jsd.onmicrosoft.cn/gh/liumingedwin/liumingedwin.github.io@main/OHR.SaintElias_ZH-CN2861097596-8k.jpg);
+			background-image: url(OHR.SaintElias_ZH-CN2861097596-8k.jpg), url(https://jsd.onmicrosoft.cn/gh/liumingedwin/liumingedwin.github.io@main/OHR.SaintElias_ZH-CN2861097596-8k.jpg);
 			width: 100%;
 			height: 100%;
 		}
@@ -111,13 +111,13 @@
 		<a href="./blogs.in.docs/">
 			<div class="nav-el"><i class="fa fa-file"></i>&nbsp;Blogs</div>
 		</a>
-		<a href="./site.modjs.old/">
+		<a href="./site.modjs.old/" hidden>
 			<div class="nav-el"><i class="fa fa-archive"></i>&nbsp;Archives</div>
 		</a>
 		<a href="https://github.com/liumingedwin">
 			<div class="nav-el"><i class="fa fa-github"></i>&nbsp;GitHub</div>
 		</a>
-		<a href="https://luogu.com.cn/117121">
+		<a href="https://luogu.com.cn/user/117121" hidden>
 			<div class="nav-el"><i class="fa fa-code"></i>&nbsp;Luogu</div>
 		</a>
 	</nav>
