--- a/blogs.in.docs/index.html
+++ b/blogs.in.docs/index.html
@@ -55,7 +55,7 @@
 			auto2top: true,
 			coverpage: true,
 			loadSidebar: true,
-			basePath: '/blogs.in.docs/',
+			basePath: location.pathname,
 			catchPluginErrors: false,
 			toc: {
 				tocMaxLevel: 5,
