Fix: fonts & displays
Note that "hidden" attribute didn't work in `<a>`, but why?

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			text-align: center;
 			display: flex;
 			height: 30%;
-			font-family: 'Courier New', Courier, monospace;
+			font-family: 'Courier New', Courier, 'JetBrains Mono', 'Sarasa Gothic SC', monospace;
 			padding: 2em;
 			transition: all 0.5s cubic-bezier(0.075, 0.82, 0.165, 1) 0.5s;
 			color: white;
@@ -88,7 +88,7 @@
 			border-radius: 100%;
 		}
 		h1{
-			font-family: Consolas, monospace;
+			font-family: Consolas, 'JetBrains Mono', 'Sarasa Gothic SC', monospace;
 			text-align: center;
 			color: white;
 		}
@@ -111,17 +111,21 @@
 		<a href="./blogs.in.docs/">
 			<div class="nav-el"><i class="fa fa-file"></i>&nbsp;Blogs</div>
 		</a>
-		<a href="./site.modjs.old/" hidden>
+		<!--
+		<a href="./site.modjs.old/">
 			<div class="nav-el"><i class="fa fa-archive"></i>&nbsp;Archives</div>
 		</a>
+		-->
 		<a href="https://github.com/liumingedwin">
 			<div class="nav-el"><i class="fa fa-github"></i>&nbsp;GitHub</div>
 		</a>
+		<!--
 		<a href="https://luogu.com.cn/user/117121" hidden>
 			<div class="nav-el"><i class="fa fa-code"></i>&nbsp;Luogu</div>
 		</a>
+		-->
 	</nav>
-	<div id="moemoemoemoemoe"><hr /><a href="https://icp.gov.moe/?keyword=20240534" target="_blank">萌ICP备20240534号</a><br /> Powered By GitHub. <br />Copyright: 2019 - 2024. All rights reserved.  
+	<div id="moemoemoemoemoe"><hr /><a href="https://icp.gov.moe/?keyword=20240534" target="_blank">萌ICP备20240534号</a><br /> Powered By GitHub. <br />Copyright: 2019 - 2025. All rights reserved.  
 </div>
 </body>
 
